--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "sigma-vocal-place": {
+    "sigma-the-vocal-place": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/sigma-vocal-place",
+            "outputPath": "dist/sigma-the-vocal-place",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -32,15 +32,9 @@
               }
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/magenta-violet.css",
               "src/styles.scss"
             ],
-            "scripts": [],
-            "server": "src/main.server.ts",
-            "prerender": true,
-            "ssr": {
-              "entry": "server.ts"
-            }
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -70,10 +64,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "sigma-vocal-place:build:production"
+              "buildTarget": "sigma-the-vocal-place:build:production"
             },
             "development": {
-              "buildTarget": "sigma-vocal-place:build:development"
+              "buildTarget": "sigma-the-vocal-place:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -97,7 +91,6 @@
               }
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/magenta-violet.css",
               "src/styles.scss"
             ],
             "scripts": []
