--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
-    "embla-carousel": "^8.2.0",
     "ol": "^10.1.0",
     "rxjs": "~7.8.0",
+    "swiper": "^11.1.11",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
