--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@angular/common": "^18.1.0",
     "@angular/compiler": "^18.1.0",
     "@angular/core": "^18.1.0",
+    "@angular/fire": "^18.0.1",
     "@angular/forms": "^18.1.0",
     "@angular/material": "^18.2.1",
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
+    "firebase": "^10.13.1",
     "ol": "^10.1.0",
     "rxjs": "~7.8.0",
     "swiper": "^11.1.11",
