--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
     "firebase": "^10.13.1",
+    "moment": "^2.30.1",
     "ol": "^10.1.0",
     "rxjs": "~7.8.0",
     "swiper": "^11.1.11",
