created logic for the AdminTimeline component; improved interfaces; refactored enum in Header

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/fire": "^18.0.1",
     "@angular/forms": "^18.1.0",
     "@angular/material": "^18.2.1",
+    "@angular/material-moment-adapter": "^18.2.4",
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
